# PromptXecure

./: .gitignore  Makefile  README.md  setup.sh
promptxecure-api/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
promptxecure-api/src/promptxecure_api/: config.py  main.py  utils.py
promptxecure-api/src/promptxecure_api/db/: models.py
promptxecure-api/src/promptxecure_api/middleware/: security.py
promptxecure-api/src/promptxecure_api/routers/: core.py  playground.py
promptxecure-api/src/promptxecure_api/schemas/: request.py  response.py
promptxecure-api/src/promptxecure_api/services/: cache.py  detection.py  langfuse_service.py  llm_gateway.py
promptxecure-core/: .gitignore  README.md  pyproject.toml
promptxecure-core/data/model/: .gitkeep  classifier.sha256
promptxecure-core/scripts/: collect_training_data.py  train_classifier.py
promptxecure-core/src/promptxecure_core/: __init__.py  config.py  containment.py  ml_classifier.py  models.py  output_validator.py  pipeline.py  preprocessor.py  rule_engine.py  shadow_llm.py  utils.py
promptxecure-core/tests/: test_containment.py  test_pipeline.py  test_preprocessor.py  test_rule_engine.py
promptxecure-dashboard/: .dockerignore  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
promptxecure-dashboard/src/: App.jsx  index.css
promptxecure-infra/: .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  README.md  docker-compose.yml
promptxecure-infra/loki/: loki-config.yml
promptxecure-infra/nginx/: nginx.conf
promptxecure-infra/postgres/: init.sql
promptxecure-infra/promtail/: promtail-config.yml
promptxecure-rules/: .gitignore  README.md
promptxecure-rules/rules/: authority_override.yml  data_extraction.yml  delimiter_injection.yml  direct_injection.yml  harmful_intent.yml  indirect_injection.yml  jailbreak.yml  multi_turn.yml  obfuscation.yml  pii_leakage.yml
promptxecure-rules/schema/: rule_schema.yml
(+22 files in other folders)
